5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_2447.log
== SUBMITION (2019-04-09 17:40:09) 
-- CODE:
preco = float(input("preco:")
pagamento = float(input("pagamento:"))
if (preco >= pagamento):
	print("Falta", preco - pagamento)
else:
	print("Troco de", pagamento - preco)
-- EXECUTION TIME:
0.135375
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:40:11) 
-- CODE:
preco = float(input("preco:")
pagamento = float(input("pagamento:"))
if (preco >= pagamento):
	print("Falta", preco - pagamento)
else:
	print("Troco de", pagamento - preco)
-- ERROR:
File "XXXX", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:40:17) 
-- CODE:
preco = float(input("preco:")
pagamento = float(input("pagamento:"))
if (preco > pagamento):
	print("Falta", preco - pagamento)
else:
	print("Troco de", pagamento - preco)
-- EXECUTION TIME:
0.151542
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:40:18) 
-- CODE:
preco = float(input("preco:")
pagamento = float(input("pagamento:"))
if (preco > pagamento):
	print("Falta", preco - pagamento)
else:
	print("Troco de", pagamento - preco)
-- EXECUTION TIME:
0.139819
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:40:18) 
-- CODE:
preco = float(input("preco:")
pagamento = float(input("pagamento:"))
if (preco > pagamento):
	print("Falta", preco - pagamento)
else:
	print("Troco de", pagamento - preco)
-- ERROR:
File "XXXX", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:40:35) 
-- CODE:
preco = float(input("preco: ")
pagamento = float(input("pagamento: "))
if (preco > pagamento):
	print("Falta", preco - pagamento)
else:
	print("Troco de", pagamento - preco)
-- EXECUTION TIME:
0.187772
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:40:35) 
-- CODE:
preco = float(input("preco: ")
pagamento = float(input("pagamento: "))
if (preco > pagamento):
	print("Falta", preco - pagamento)
else:
	print("Troco de", pagamento - preco)
-- EXECUTION TIME:
0.156662
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:40:35) 
-- CODE:
preco = float(input("preco: ")
pagamento = float(input("pagamento: "))
if (preco > pagamento):
	print("Falta", preco - pagamento)
else:
	print("Troco de", pagamento - preco)
-- ERROR:
File "XXXX", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:40:46) 
-- CODE:
preco = float(input("preco: "))
pagamento = float(input("pagamento: "))
if (preco > pagamento):
	print("Falta", preco - pagamento)
else:
	print("Troco de", pagamento - preco)
-- EXECUTION TIME:
0.213293
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
